--- a/.github/workflows/sdle-scans.yaml
+++ b/.github/workflows/sdle-scans.yaml
@@ -4,20 +4,18 @@ on:
   push:
     branches:
       - main
-      - "feature/**"
   pull_request:
 
 jobs:
 
   # -----------------------------
-  # 1) Trivy Scan (container & code)
+  # 1) Trivy Scan
   # -----------------------------
   trivy_scan:
     name: Trivy Vulnerability Scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install Trivy
         run: |
@@ -27,24 +25,25 @@ jobs:
           tar zxvf trivy_*.tar.gz
           sudo mv trivy /usr/local/bin/
 
-      - name: Run Trivy File System Scan
-        run: trivy fs --security-checks vuln,config . --exit-code 1 || true
+      - name: Run Trivy FS Scan
+        run: trivy fs --security-checks vuln,config . --format json --output trivy-report.json || true
 
-      - name: Trivy SBOM + Report
-        run: trivy sbom . --output trivy-sbom.json
+      - name: Upload Trivy Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-report
+          path: trivy-report.json
 
   # -----------------------------
-  # 2) Bandit Scan (Python SAST)
+  # 2) Bandit Scan
   # -----------------------------
   bandit_scan:
     name: Bandit Python Static Scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.x"
 
@@ -52,10 +51,10 @@ jobs:
         run: pip install bandit
 
       - name: Run Bandit
-        run: bandit -r . -f html -o bandit-report.html
+        run: bandit -r . -f html -o bandit-report.html || true
 
       - name: Upload Bandit Report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: bandit-report
           path: bandit-report.html
@@ -67,53 +66,49 @@ jobs:
     name: Coverity Static Analysis
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install Coverity Toolset
+      - name: Install Dependencies
         run: |
-          # Install or bootstrap Coverity CLI if available
-          # (Replace with your specific Coverity setup instructions)
-          echo "Installing Coverity…"
           sudo apt-get update
-          sudo apt-get install -y flex bison build-essential
+          sudo apt-get install -y build-essential flex bison
 
+      # You MUST replace this with real Coverity install
       - name: Run Coverity Analysis
         run: |
           mkdir cov-out
-          # Replace below with your Coverity tour of code commands
-          cov-build --dir cov-out make
+          echo "Run cov-build here"
+          # Example:
+          # cov-build --dir cov-out make
 
       - name: Upload Coverity Output
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverity-output
           path: cov-out
 
   # -----------------------------
-  # 4) ClamAV Malware Scan
+  # 4) ClamAV Scan
   # -----------------------------
   clamav_scan:
     name: ClamAV Malware Scan
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Install ClamAV
         run: |
           sudo apt-get update
-          sudo apt-get install -y clamav clamav-daemon
+          sudo apt-get install -y clamav
 
-      - name: Update ClamAV DB
+      - name: Update Virus DB
         run: sudo freshclam
 
-      - name: Run ClamAV Against Repo
-        run: |
-          clamscan -r . > clamav-results.txt || true
+      - name: Run ClamAV
+        run: clamscan -r . --infected --no-summary > clamav-report.txt || true
 
       - name: Upload ClamAV Report
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: clamav-report
-          path: clamav-results.txt
+          path: clamav-report.txt
