--- a/.github/workflows/sdle-scans.yaml
+++ b/.github/workflows/sdle-scans.yaml
@@ -2,9 +2,14 @@ name: SDLE Scans
 
 on:
   workflow_dispatch:
+    inputs:
+      PR_number:
+        description: 'Pull request number'
+        required: true
   push:
     branches: [ main ]
   pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
 
 jobs:
 
@@ -14,24 +19,37 @@ jobs:
   trivy_scan:
     name: Trivy Vulnerability Scan
     runs-on: ubuntu-latest
+    env:
+      TRIVY_REPORT_FORMAT: table
+      TRIVY_SCAN_TYPE: fs
+      TRIVY_SCAN_PATH: .
+      TRIVY_EXIT_CODE: '1'
+      TRIVY_VULN_TYPE: os,library
+      TRIVY_SEVERITY: CRITICAL,HIGH
     steps:
       - uses: actions/checkout@v4
-
+      
+      - name: Create report directory
+        run: mkdir -p trivy-reports
+        
       - name: Run Trivy FS Scan
         uses: aquasecurity/trivy-action@0.24.0
         with:
-          scan-type: fs
-          scan-ref: .
-          format: json
-          output: trivy-report.json
-          severity: CRITICAL,HIGH
+          scan-type: 'fs'
+          scan-ref: '.'
+          scanners: 'vuln,misconfig,secret,license'
           ignore-unfixed: true
+          format: 'table'
+          exit-code: '0'
+          output: 'trivy-reports/trivy_scan_report.txt'
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
 
       - name: Upload Trivy Report
         uses: actions/upload-artifact@v4
         with:
           name: trivy-report
-          path: trivy-report.json
+          path: trivy-reports/trivy_scan_report.txt
 
 # -----------------------------
 # 2) Bandit Scan
